tests/snapshots/parser__decode_osm_pbf_files@libosmium__examples_t_amenity_list_node.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/examples_t_amenity_list_node.osm.pbf
---
[
    Create {
        elem: Node,
        id: 24960505,
        ts: 1362093999000,
        val: indoc! {r#"
            osmt:amenity "post_office";
            osmt:wheelchair "yes";
            osmm:loc "Point(8.872053600000001 53.096629)"^^geo:wktLiteral;
            osmm:type "n";
            osmm:version "5"^^xsd:integer;
            osmm:user "cracklinrain";
            osmm:timestamp "2013-02-28 23:26:39 UTC"^^xsd:dateTime;
            osmm:changeset "15203542"^^xsd:integer.
        "}#",
    },
]
