tests/snapshots/parser__decode_osm_pbf_files@libosmium__examples_t_change_tags_result-gen.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/examples_t_change_tags_result-gen.osm.pbf
---
[
    Skip,
    Skip,
    Skip,
    Create {
        elem: Way,
        id: 20,
        ts: 1388534400000,
        val: indoc! {r#"
            osmt:natural "wood";
            osmt:name "Example Forest";
            osmm:type "w";
            osmm:version "1"^^xsd:integer;
            osmm:user "test";
            osmm:timestamp "2014-01-01 00:00:00 UTC"^^xsd:dateTime;
            osmm:changeset "1"^^xsd:integer.
            osmm:isClosed "false"^^xsd:boolean;
            osmm:loc "Point(1.039999975375831 7.109999995264225)"^^geo:wktLiteral;
        "}#",
    },
    Create {
        elem: Relation,
        id: 30,
        ts: 1388534400000,
        val: indoc! {r#"
            osmt:note " relation without members";
            osmm:type "r";
            osmm:version "1"^^xsd:integer;
            osmm:user "test";
            osmm:timestamp "2014-01-01 00:00:00 UTC"^^xsd:dateTime;
            osmm:changeset "1"^^xsd:integer.
        "}#",
    },
]
