tests/snapshots/parser__decode_osm_pbf_files@libosmium__examples_t_debug_changesets.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/examples_t_debug_changesets.osm.pbf
---
[]
